# KTLT

./: .clang-format  CMakeLists.txt  data.db
app/: App.cpp  App.hpp  Theme.hpp  main.cpp
app/client/: Client.cpp  Client.hpp
app/pages/: AccountsettingsPage.cpp  AccountsettingsPage.hpp  DashboardPage.cpp  DashboardPage.hpp  DepositPage.cpp  DepositPage.hpp  HistoryPage.cpp  HistoryPage.hpp  LoginPage.cpp  LoginPage.hpp  RegisterPage.cpp  RegisterPage.hpp  SettingPage.cpp  SettingPage.hpp  SignupPage.cpp  SignupPage.hpp  TransferPage.cpp  TransferPage.hpp  WithdrawPage.cpp  WithdrawPage.hpp
data/: admin.txn  hechbros.txn  user1.txn
docs/: API_REFERENCE.md  APP_CLIENT.md  LIBRARY_BASE.md  LIBRARY_NETWORK.md  MECHANICS.md  PROJECT_OVERVIEW.md  PROTOCOL.md  README.md  SERVER_DATABASE.md  explanation.md  how-to.md  reference.md  tutorial.md
libs/base/: algorithm.hpp  array.hpp  forward_list.hpp  hash.hpp  hash_map.hpp  hash_set.hpp  hash_table.hpp  list.hpp  map.hpp  rbtree.hpp  set.hpp  sha256.hpp  string.hpp  types.hpp  vector.hpp
libs/network/: Packet.cpp  Packet.hpp  PacketType.hpp
server/: Database.cpp  Database.hpp  Server.cpp  Server.hpp  ServerLog.cpp  ServerLog.hpp  main.cpp
tests/: generate_test_data.cpp
